Styling (fix shopping cart align)

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -496,7 +496,6 @@ textarea {
 
 .shopping-cart {
   display: flex;
-  justify-content: space-between;
 }
 
 .shopping-cart__label {
